--- a/public/index.html
+++ b/public/index.html
@@ -3,24 +3,24 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="/vaultriselogo.jpg" />
+  <link rel="icon" href="/pionexlogo2.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="A strategically designed investment network that helps investors maximize profits by mirroring expert trades across global markets. Take the next step toward financial freedom—join us today.">
   <meta name="keywords" content="bitcoin,trading,crypto,forex,investing,investment,gold,oil">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta itemprop="name" content="vaultrisegroup.com">
+  <meta itemprop="name" content="pionexx-mgt.com">
   <meta itemprop="description" content="">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="vaultrisegroup.com">
+  <meta property="og:title" content="pionexx-mgt.com">
   <meta property="og:description" content="A sophisticated investment system designed to help investors grow their profits by replicating expert trades in global markets. Take the next step toward financial success—join us today.">
   <meta property="og:image:type" content="image/png" />
   <meta property="og:image:width" content="600" />
   <meta property="og:image:height" content="315" />
-  <meta property="og:url" content="https://vaultrisegroup.com">
+  <meta property="og:url" content="https://pionexx-mgt.com">
   <meta name="twitter:card" content="summary_large_image">
-  <link rel="apple-touch-icon" href="/vaultriselogo.jpg" />
+  <link rel="apple-touch-icon" href="/pionexlogo2.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link
     href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,400&family=Plus+Jakarta+Sans:wght@200;300;400;500;600;700;800&family=Poppins:wght@300;400;500;600;700;800;900&family=Red+Hat+Display:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto:wght@300;400;500;700;900&display=swap"
@@ -135,7 +135,7 @@
         }
 
   </style>
-  <title>vaultrisegroup</title>
+  <title>pionexx-mgt</title>
 </head>
 
 <body>
